@@ -85,6 +85,13 @@ AC_ARG_WITH(eaccelerator-executor,
   eaccelerator_executor=no
 ])
 
+AC_ARG_WITH(eaccelerator-use-inode,
+[  --without-eaccelerator-use-inode            Don't use inodes to determine hash keys (never used on win32)],[
+  eaccelerator_inode=$withval
+],[
+  eaccelerator_inode=yes
+])
+
 dnl PHP_BUILD_SHARED
 if test "$PHP_EACCELERATOR" != "no"; then
   PHP_EXTENSION(eaccelerator, $ext_shared)
@@ -119,6 +126,9 @@ if test "$PHP_EACCELERATOR" != "no"; then
   fi
   if test "$eaccelerator_executor" = "yes"; then
     AC_DEFINE(WITH_EACCELERATOR_EXECUTOR, 1, [Define if you like use optimized executor (not implemented yet)])
+  fi
+  if test "$eaccelerator_inode" = "yes"; then
+    AC_DEFINE(WITH_EACCELERATOR_USE_INODE, 1, [Undef if you don't wan't to use inodes to determine hash keys])
   fi
 
   AC_REQUIRE_CPP()
